# ProjectUTD

./: .gitattributes  .gitignore  README.md
SocialWill/Picasso/: ARCHITECTURE.md  README.md  pyproject.toml
SocialWill/Picasso/docs/: HANDOFF.md  PROJECT_STATUS.md  REVISION_LOG.md  agent_playbooks.md  agent_semantic_review.md  brush_room_system.md  fragment_system.md  implementation_order.md  mechanical_structures.md  phase15_contingency.md  player_activity_pipeline.md  runtime_issues.md  segmentation_implementation_phases.md  semantic_segmentation.md  structure_detection_tool_specs.md  style_learning.md  style_pass_schema.md  tool_specs.md  v05_forward_requirements.md  wargame_interface.md
SocialWill/Picasso/tests/: test_activity_tools.py  test_amulet_bridge.py  test_analysis_semantics.py  test_build_log_reader.py  test_bundle_library.py  test_bundle_semantics.py  test_catalog_index.py  test_create_track_semantics.py  test_data_integrity.py  test_definition_models.py  test_definition_store.py  test_diagnostics.py  test_halo_read.py  test_inspection_tool.py  test_journal.py  test_journal_tools.py  test_npc_marker.py  test_pattern_matcher.py  test_pattern_safety.py  test_player_protection.py  test_player_protection_snapshot.py  test_player_protection_wiring.py  test_server_prompts.py  test_server_registration.py  test_server_singleflight.py  test_shipped_fragment_behavior.py  test_shipped_pattern_behavior.py  test_stair_semantics.py  test_storey_semantics.py  test_tool_contracts.py  test_vanilla_rail_graph.py  test_volume_inspector.py  test_world_e2e.py  (+1 more)
(+5611 files in other folders)
